fixed sizing issues (sizes correctly on mobile)

--- a/style.css
+++ b/style.css
@@ -44,24 +44,19 @@ main {
 #bottom {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    height: 40px;
-    padding: 0;
-    margin: 0;
 }
 
-#bottom > h3 {
+h3 {
     color: dimgray;
+    text-overflow: break-word;
     padding: 0;
     margin: 0;
 }
 
 #continue {
-    width: fit-content;
     box-sizing: content-box;
     height: 20px;
     padding: 7px;
-    background-color: MediumBlue;
     border: 0;
     border-bottom: 5px solid navy;
     border-radius: 7px;
@@ -83,7 +78,8 @@ main {
 
 #webcam {
     width: 400px;
-    aspect-ratio: calc(4/3);
+    /* min-height: 300px; */
+    /* aspect-ratio: calc(4/3); */
     border-radius: 5px;
     background-color: dimgray;
 }
